...
  val darkTheme = isSystemInDarkTheme()
  ModalNavigationDrawer(
      drawerContent = {
        Box(
            modifier =
                Modifier.fillMaxSize()
                    .testTag("closingMenuBox")
                    .padding(start = (configuration.screenWidthDp * 0.75).dp)
                    .clickable {
                      if (drawerState.isOpen) {
                        scope.launch { drawerState.close() }
                      }
                    }) {
              FloatingActionButton(
                  onClick = { scope.launch { drawerState.close() } },
                  modifier =
                      Modifier.testTag("closingMenuFab")
                          .align(Alignment.TopEnd)
                          .zIndex(1f)
                          .padding(end = 8.dp)
                          .padding(top = 8.dp)) {
                    Icon(imageVector = Icons.Default.Close, contentDescription = "MenuClosing")
                  }
            }
        ModalDrawerSheet(modifier = Modifier.fillMaxWidth(0.75f).testTag("drawerSheetMenu")) {
          listOfTopLevelDestinations.forEach { item ->
            NavigationDrawerItem(
                icon = { Icon(item.icon, contentDescription = null) },
                label = { Text(item.textId) },
                selected = false,
                onClick = {
...
              onClick = {
                scope.launch { drawerState.close() }
                Firebase.auth.signOut() // actual sign out
                navigationActions.navigateTo(Screen.AUTH)
              },
              modifier =
                  Modifier.padding(NavigationDrawerItemDefaults.ItemPadding).testTag("itemLogout"))
        }
      },
      drawerState = drawerState,
      gesturesEnabled = false) {
        Box(modifier = Modifier.fillMaxSize()) {
          FloatingActionButton(
              onClick = { scope.launch { drawerState.open() } },
              modifier =
                  Modifier.testTag("menuFab")
                      .align(Alignment.TopStart)
                      .zIndex(1f)
                      .padding(start = 8.dp)
                      .padding(top = 8.dp)) {
                Icon(imageVector = Icons.Default.Menu, contentDescription = "Menu")
              }

          Scaffold(
              modifier = Modifier.testTag("TravelListScreen"),
              floatingActionButton = {
                FloatingActionButton(
                    onClick = { navigationActions.navigateTo(Screen.ADD_TRAVEL) },
                    modifier = Modifier.testTag("createTravelFab")) {
                      Icon(imageVector = Icons.Default.Add, contentDescription = "Add")
                    }
              },
              content = { pd ->
                Column(modifier = Modifier.fillMaxSize().padding(pd)) {
                  // Map placed outside the LazyColumn to prevent it from being part of the
...
                                  AnimatedVisibility(
                                      visible = isLoading.value,
                                      enter = fadeIn(animationSpec = tween(150)),
                                      exit = fadeOut(animationSpec = tween(150))) {
                                        CircularProgressIndicator(
                                            modifier =
                                                Modifier.testTag("loadingSpinner").size(100.dp),
                                            color = MaterialTheme.colorScheme.primary,
                                            strokeWidth = 5.dp,
                                            strokeCap = StrokeCap.Round,
                                        )
                                      }

                                  Spacer(modifier = Modifier.fillMaxWidth(0.1f))
                                  Text(
                                      modifier = Modifier.testTag("emptyTravelPrompt"),
                                      text = "Create your first travel!",
                                      style =
                                          MaterialTheme.typography.headlineMedium.copy(
                                              fontWeight = FontWeight.Bold),
                                      color = MaterialTheme.colorScheme.onBackground)
                                }
...
 * @param onClick Callback function for item click.
 */
@Composable
fun TravelItem(travelContainer: TravelContainer, onClick: () -> Unit) {
  Card(
      modifier =
          Modifier.testTag("travelListItem")
              .fillMaxWidth()
              .padding(vertical = 6.dp)
              .clickable(onClick = onClick),
      colors =
          CardColors(
              containerColor = MaterialTheme.colorScheme.surface,
...
    }

    // Strap handle at the bottom to drag and resize the map
    Box(
        modifier =
            Modifier.fillMaxWidth()
                .testTag("mapLatch")
                .graphicsLayer {
                  shape =
                      CutCornerShape(
                          topStart = 0.dp, topEnd = 0.dp, bottomStart = 16.dp, bottomEnd = 16.dp)
                  clip = true
                }
...
