...
    } else {
      position = CameraPosition.fromLatLngZoom(LatLng(0.0, 0.0), 1f)
    }
  }

  GoogleMap(
      modifier = modifier.fillMaxSize().testTag("mapScreen"),
      cameraPositionState = cameraPositionState) {
        markers.forEach { travelContainer ->
          val location = travelContainer.location
          val position = LatLng(location.latitude, location.longitude)
          SimpleMarker(
              position = position,
...
